# docs/swagger.json
@@ -140,6 +140,42 @@
                         "description": "OK"
                     }
                 }
+            },
+            "patch": {
+                "description": "Update specific fields of an existing issue",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Update specific fields of an existing issue",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Issue ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Fields to be updated",
+                        "name": "updateRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Issue"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Issue"
+                        }
+                    }
+                }
             }
         }
     },
@@ -149,7 +185,7 @@
             "type": "object",
             "properties": {
                 "assigned_to": {
-                    "description": "name of user who creates issue",
+                    "description": "name of assignee of the issue",
                     "type": "string"
                 },
                 "category": {
@@ -161,11 +197,11 @@
                     "type": "string"
                 },
                 "created_on": {
-                    "description": "name of user who creates issue",
+                    "description": "issue created date",
                     "type": "string"
                 },
                 "eta": {
-                    "description": "name of user who creates issue",
+                    "description": "time whne issue will be fixed",
                     "type": "string"
                 },
                 "issue_description": {
@@ -176,7 +212,7 @@
                     "type": "integer"
                 },
                 "priority": {
-                    "description": "name of user who creates issue",
+                    "description": "issue prioroty",
                     "type": "string"
                 },
                 "state": {
@@ -184,14 +220,14 @@
                     "type": "string"
                 },
                 "tags": {
-                    "description": "name of user who creates issue",
+                    "description": "tags to filter issue",
                     "type": "array",
                     "items": {
                         "type": "string"
                     }
                 },
                 "updated_on": {
-                    "description": "name of user who creates issue",
+                    "description": "issue updated time",
                     "type": "string"
                 }
             }
